--- a/src/styles/components/_catalog-tools.scss
+++ b/src/styles/components/_catalog-tools.scss
@@ -14,6 +14,7 @@
   &__upper {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: $gap-sm;
   }
 
